HW_Kubernetes/5/dep_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: dep_z1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dep_z1
  template:
    metadata:
      labels:
        app: dep_z1
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:f23a085
