HW_Kubernetes/5/dep_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: dep_z1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dep_z1
  template:
    metadata:
      labels:
        app: dep_z1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
