HW_Kubernetes/5/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: dep_z1
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 8080
