HW_Kubernetes/5/svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: dep_z1
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
