HW_Kubernetes/5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
spec:
  rules:
  - host: tourk-homework.ru
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: multitool-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
